# SiEPIC-Tools

./: LICENSE.md  README.md  pyproject.toml
Python_packages_for_KLayout/already installed/urllib3/: _collections.py  connection.py  connectionpool.py  exceptions.py  poolmanager.py  response.py
Python_packages_for_KLayout/python/idna/: core.py  idnadata.py  uts46data.py
Python_packages_for_KLayout/python/requests/: __init__.py  __version__.py  adapters.py  auth.py  help.py  models.py  sessions.py  status_codes.py  utils.py
Python_packages_for_KLayout/python/svgwrite/: __init__.py  base.py  container.py  drawing.py  gradients.py  image.py  path.py  shapes.py  text.py  utils.py
Python_packages_for_KLayout/python/yaml/: constructor.py  representer.py  resolver.py  scanner.py
Windows_Python_packages_for_KLayout/python/: pyparsing.py
Windows_Python_packages_for_KLayout/python/h5py/: __init__.py  ipy_completer.py  version.py
Windows_Python_packages_for_KLayout/python/h5py-3.8.0/: api_gen.py  setup.py  setup_build.py  setup_configure.py
Windows_Python_packages_for_KLayout/python/shapely/: _version.py  ops.py  testing.py
docs/: Labelling Standards.md  SiEPIC.lumerical.rst  SiEPIC.rst  SiEPIC.simulation.contraDC.contra_directional_coupler.rst  SiEPIC.simulation.contraDC.rst  SiEPIC.simulation.rst  SiEPIC.utils.rst  conf.py  index.rst  modules.rst
examples/other/bezier_curves/: bezier_curves.py
klayout_dot_config/: grain.xml
klayout_dot_config/pymacros/: SiEPIC.lym
legacy/PythonLumericalTools/: montecarlo_lumerical.py
tests/: __init__.py  test_gsip.py
(+263 files in other folders)
